@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2009.January.29 (0.9.21)
+2009.January.30 (0.9.21)
   * New Starters:
     -------------
     * Silver Frame
@@ -37,13 +37,17 @@ $Id$
     * + Confetti - Paints random confetti bits on the canvas.
       + Fold - Folds the corners of the image up, like a piece of paper.
       + Fisheye - Warps part of the picture, as though seen through a fisheye.
-      + Rails - Draws train tracks / rails over the image.
       + TV - Adds television (CRT) interlacing lines over the image.
       + Rosette - Paints at 3 points on the screen, in a rosette shape.
       + Picasso - Paints at 3 points, in a "Picasso" art style.
       + Wavelets - Waves that go up and down.
       By Adam 'foo-script' Rakowski <foo-script@o2.pl>
       (Part of Tux4Kids' participation in Google Summer of Code 2008)
+
+    * Rails - Draws train tracks / rails over the image.
+      By Adam 'foo-script' Rakowski <foo-script@o2.pl> (GSOC 2008),
+      with modifications by Bill Kendrick
+      and Pere Pujal i Carabantes <pere@fornol.no-ip.org>
 
   * Magic Tool Improvememnts:
     --------------------------
